@@ -3,7 +3,7 @@
 /*
  *  LMS version 1.11-git
  *
- *  Copyright (C) 2001-2013 LMS Developers
+ *  Copyright (C) 2001-2020 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -39,4 +39,6 @@ interface LMSConfigManagerInterface
     public function CheckOption($option, $value, $type);
 
     public function GetConfigVariable($config_id);
+
+    public function CloneConfigSection($section, $new_section, $userid = null);
 }
