@@ -4617,3 +4617,5 @@ $_LANG['Tax category selection is required!'] = 'Wymagany wybór kategorii podat
 $_LANG['TERRIT address is required!'] = 'Wymagany adres zgodny z TERYT!';
 
 $_LANG['investment project management'] = 'zarządzanie projektami inwestycyjnymi';
+
+$_LANG['Clone section to new one with specified name'] = 'Kopiuj sekcję pod nową nazwą, którą określiłeś';
