@@ -101,6 +101,13 @@ if (count($config)) {
     $config = $LMS->GetConfigVariable($_GET['id']);
     unset($config['id']);
     $config['section'] = trans('$a-clone', $config['section']);
+} elseif (isset($_GET['section']) && isset($_GET['new-section'])) {
+    if (!preg_match('/^[a-z0-9_-]+$/', $_GET['section'])
+        || !preg_match('/^[a-z0-9_-]+$/', $_GET['new-section'])) {
+        die;
+    }
+    $LMS->CloneConfigSection($_GET['section'], $_GET['new-section'], isset($_GET['userid']) ? intval($_GET['userid']) : null);
+    $SESSION->redirect('?m=configlist');
 }
 
 $SESSION->save('backto', $_SERVER['QUERY_STRING']);
