@@ -2,10 +2,33 @@
 {block name=title}LMS: {$layout.pagetitle|striphtml}{/block}
 {block name=module_content}
 <style>
+
 	table#configlist-datatable tr td p {
 		margin-top: 0;
 		margin-bottom: 0;
 	}
+
+	table#configlist-datatable tr th {
+		background-position: bottom 0.7em right;
+	}
+
+	#command-buttons {
+		display: flex;
+		flex-direction: column;
+	}
+
+	#section-clone {
+		padding-top: 0.7em;
+	}
+
+	#section-name {
+		width: 6em;
+	}
+
+	#section-name:focus {
+		width: 15em;
+	}
+
 </style>
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
@@ -20,23 +43,29 @@
     </COLGROUP>
     <THEAD>
 	<TR>
-		<TH scope="col" class="nobr" data-searchable="true" data-select-value="true">
+		<TH scope="col" class="valign-bottom nobr" data-searchable="true" data-select-value="true" data-filter-id="section-filter">
 			<IMG src="img/empty.gif" alt="" width="16" height="16"> {trans("Section:")}
 		</TH>
-		<TH scope="col" class="bold nobr">
+		<TH scope="col" class="valign-bottom bold nobr">
 			<IMG src="img/settings.gif" alt=""> {trans("Name:")}
 		</TH>
-		<TH scope="col" class="text-center">
+		<TH scope="col" class="text-center valign-bottom">
 			{trans("Value:")}
 		</TH>
-		<TH scope="col" class="text-center">
+		<TH scope="col" class="text-center valign-bottom">
 			{trans("Comment:")}
 		</TH>
-		<TH scope="col" class="nobr" data-searchable="true" data-select-value="true">
+		<TH scope="col" class="valign-bottom nobr" data-searchable="true" data-select-value="true" data-filter-id="user-filter">
 			{trans("User:")}
 		</TH>
-		<TH scope="col" class="text-right nobr" data-searchable="false" data-sortable="false">
-			<A class="configadd">{trans("Add option")} <IMG src="img/save.gif" alt=""></A>
+		<TH scope="col" class="text-right valign-bottom nobr" data-searchable="false" data-sortable="false">
+			<div id="command-buttons">
+				<A class="configadd">{trans("Add option")} <IMG src="img/save.gif" alt=""></A>
+				<div id="section-clone" style="display: none;">
+					<input type="text" id="section-name" value="">
+					{button type="link" icon="clone" id="section-clone-button" tip="Clone section to new one with specified name"}
+				</div>
+			</div>
 		</TH>
 	</TR>
     </THEAD>
@@ -85,6 +114,7 @@
     </TFOOT>
 </TABLE>
 <script>
+
 	$('.configadd').click(function() {
 		var select = $('thead tr select', $(this).closest('table'));
 		href = '?m=configadd';
@@ -107,6 +137,35 @@
 			});
 		}
 		return false;
+	});
+
+	$(function() {
+		function toggleSectionClone() {
+			$('#section-clone').toggle($('#section-filter').val().length > 0);
+
+		}
+
+		$('#section-filter').change(function() {
+			toggleSectionClone();
+		})
+
+		$('#section-clone-button').click(function() {
+			var section_name = $('#section-name').val();
+			if (!section_name.length) {
+				alertDialog($t("Section name can't be empty"), this);
+				return false;
+			}
+			if (!section_name.match(/^[a-z0-9_-]+$/)) {
+				alertDialog($t("Section name contains forbidden characters!"), this);
+				return false;
+			}
+
+			var userid = parseInt($('#user-filter').val());
+			location.href = '?m=configadd&section=' + $('#section-filter').val() + '&new-section=' + section_name +
+					(userid ? '&userid=' + userid : '');
+		});
+
+		toggleSectionClone();
 	});
 
 </script>
