@@ -217,7 +217,8 @@ version 25-git (????-??-??):
   - improvement: new user permission - investment project management [chilan]
   - improvement: replaced customer address selection icons by font awesome icons [chilan]
   - enhancement: added uke income service type report [chilan]
-  - enhancement: added 'clone' action button on configuration variable list [chilan]
+  - enhancement: added 'clone' action button on configuration variable list - single
+    variables and whole configuration sections can be cloned [chilan]
 
 version 24.0 (2019-05-16):
 
